--- a/lars6653/aboutme.html
+++ b/lars6653/aboutme.html
@@ -15,28 +15,30 @@
             <h2 class="nav"><a class="nav active" href="aboutme.html">About Me</a></h2>
         </div>
 
-        <div class="centered margin5percentTB">
-            <h1>About Me</h1>
-        </div>
+        <div class="content">
+            <div class="centered margin5percentTB">
+                <h1>About Me</h1>
+            </div>
 
-        <div class="centered margin5percentTB">
-            <table class="aboutme">
-                <tbody>
-                    <tr class="roboto300">
-                        <td class="aboutme"><a href=""><img id="me" src="https://cards.scryfall.io/large/front/b/3/b35fd2a8-cccd-4b35-b791-d70e74e203bc.jpg?1675651312"></img></a></td>
-                        <td>
-                            Stuff About Me:
-                            <ul>
-                                <li>aint no way</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        
-        <div class="centered margin5percentTB">
-            <iframe style="border: 0" width="1120" height="630" src="https://www.youtube.com/embed/scWj1BMRHUA?si=fMysQyO3lvVZuLUL" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <div class="centered margin5percentTB">
+                <table class="aboutme">
+                    <tbody>
+                        <tr class="roboto300">
+                            <td class="aboutme"><img id="me" src="https://cards.scryfall.io/large/front/b/3/b35fd2a8-cccd-4b35-b791-d70e74e203bc.jpg?1675651312"/></td>
+                            <td>
+                                Stuff About Me:
+                                <ul>
+                                    <li>im going to dan challoot myself</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            
+            <div class="centered margin5percentTB">
+                <iframe style="border: 0;" width="1120" height="630" src="https://www.youtube.com/embed/scWj1BMRHUA?si=fMysQyO3lvVZuLUL" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
         </div>
     </body>
 </html>
